<resources>
    <string name="app_name">Muslim News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="shareapp">https://play.google.com/store/apps/details?id=bbc.mobile.news.ww</string>

    <string name="salat_setting">Settings</string>
    <string name="title_activity_settings">Settings</string>


    <string name="calculation_method">गणना विधि</string>
    <string name="key_calculation_method">key_calculation_method</string>
    <string name="summary_calculation_method">गणना पद्धति चुनें</string>
    <string name="title_calculation_method">गणना विधि</string>
    <string name="value_calculation_method">MWL</string>

    <string name="notifications_new_message">notification_new_message</string>
    <string name="title_notification">नया संदेश अधिसूचना</string>

    <string name="summary_about"></string>

    <string name="title_version">संस्करण</string>
    <string name="app_version">1.0</string>

    <!--feedback-->
    <string name="summary_support"></string>
    <string name="title_send_feedback"></string>
    <string name="key_send_feedback">key_send_feedback</string>

    <string name="dihijri">हिजरी तिथि समायोजन</string>
    <string name="key_hijriday">key_hijri_day</string>
    <string name="title_hijriday">हिजरी तिथि समायोजन</string>
    <string name="summary_hijriday">उपयुक्त हिजरी तिथि समायोजित करें</string>
    <string name="value_hijriday">0</string>

    <string name="pref_title_notifications">ऐप अधिसूचना</string>
    <string name="pref_header_about">हमारे बारे में</string>

    <string name="value_jusristic">standard</string>
    <string name="title_di_juristic">जुरिस्टिक विधि चुनें</string>
    <string name="key_juristic">key_juristic</string>
    <string name="summary_juristic">मानक जुरिस्टिक विधि चुनें</string>
    <string name="title_juristic">जुरिस्टिक विधि</string>
    <string name="title_activity_women_section">WomenSectionActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
